# ProjetoOrientado

./: README.md
look-kg/: pyproject.toml
look-kg-clean-arch-full-fixed/: README.md
look-kg-clean-arch-full-fixed/application/: services.py
look-kg-clean-arch-full-fixed/data/: catalog.db  catalog.json
look-kg-clean-arch-full-fixed/domain/: entities.py
look-kg-clean-arch-full-fixed/infrastructure/graph/: networkx_repo.py
look-kg-clean-arch-full-fixed/infrastructure/graph_builder/: rules_engine.py
look-kg-clean-arch-full-fixed/infrastructure/storage/: catalog_repo.py
look-kg-clean-arch-full-fixed/ops/: Dockerfile.web  Makefile  catalog_schema.sql  docker-compose.yml  seed.py  smoke.py
look-kg-clean-arch-full-fixed/presentation/api/: main.py
look-kg-clean-arch-full-fixed/presentation/web/: index.html  package.json
look-kg-clean-arch-full-fixed/presentation/web/src/: App.tsx  constants.ts
look-kg/ops/: Dockerfile.api  migrate_catalog_to_sqlite.py  seed.py
look-kg/presentation/api/: routers.py  schemas.py
look-kg/presentation/web/: tsconfig.json
look-kg/presentation/web/src/: App.tsx  api.ts
